<resources>
    <string name="app_name">Spyapp</string>
    <string name="regester">Regester</string>
    <string name="enter_pawword">Enter Pawword</string>
    <string name="enter_login">login</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_signup">signup</string>
    <string name="enter_password">password</string>
    <string name="enter_email">email</string>
    <string name="reenter_password">password again</string>
    <string name="confirm">confirm</string>
    <string name="todo">TODO</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="reenter_password"> Repeat password </string>
    <string name="title_activity_maps">Map</string>
</resources>
