<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="115dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_login"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="197dp"
            android:ems="10"
            android:hint="@string/enter_pawword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/Text"
            android:layout_marginBottom="149dp"
            android:text="@string/log_in" />

        <Button
            android:id="@+id/regester"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/Text"
            android:layout_alignTop="@+id/loginbutton"
            android:text="@string/regester" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>