<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUP">

    <RelativeLayout
        android:id="@+id/signuplayout"
        android:layout_width="408dp"
        android:layout_height="508dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="53dp"
            android:hint="@string/enter_login"
            android:inputType="text" />

        <EditText
            android:id="@+id/password"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="181dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/passwordrenter"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="218dp"
            android:hint="@string/reenter_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/enteremail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="118dp"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/confirmSignUp"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="125dp"
            android:text="confirm"
            android:textColor="@android:color/holo_green_dark" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>